# lattisense

./: .clang-format  .commitlintrc.yaml  .dockerignore  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README_Softmax_FHE.md  README_sparse_bts.md  README_task5.md  README_zh.md  ruff.toml
.github/docker/: ci.Dockerfile
.github/workflows/: ci.yml  format.yml  license.yml  python-lint.yml  static-analysis.yml
abi/: CMakeLists.txt  c_structs.c  c_structs.h  c_types.h
cmake/: LattiSenseConfig.cmake.in
cxx_sdk_v2/: CMakeLists.txt  check_sig.h  cxx_abi_bridge_executors.h  cxx_argument.h  cxx_fhe_task.cpp  cxx_fhe_task.h  cxx_fhe_task_common.h  cxx_fhe_task_cpu.cpp  cxx_fhe_task_fpga.cpp  cxx_fhe_task_gpu.cpp  cxx_fpga_ops.cpp  cxx_fpga_ops.h  fhe_task_param.h
doc/doc-en/1_Quick_Start/: 1_Quick_Start.md
doc/doc-en/2_Platform_Overview/: 2_Platform_Overview.md
doc/doc-en/3_Application_Development_Examples/: 3_Application_Development_Examples.md
doc/doc-en/4_API_Reference/: 4_API_Reference.md
doc/doc-zh/1_快速开始/: 1_快速开始.md
doc/doc-zh/2_平台概述/: 2_平台概述.md
doc/doc-zh/3_应用开发示例/: 3_应用开发示例.md
doc/doc-zh/4_API参考/: 4_API参考.md
docs/: windows-build.md
examples/: CMakeLists.txt
examples/benchmark_convolution/: CMakeLists.txt  array_util.h  benchmark_convolution.py  benchmark_convolution_cpu.cpp  benchmark_convolution_gpu.cpp  conv2d_layer.cpp  conv2d_layer.h  conv2d_packed_layer.cpp  conv2d_packed_layer.h  feature.h  ndarray.h  types.h
examples/benchmark_cpu/: CMakeLists.txt  benchmark_cpu.cpp
examples/benchmark_gpu/: CMakeLists.txt  benchmark_gpu.cpp  benchmark_gpu.py
examples/bfv_mult_cpu/: CMakeLists.txt  bfv_mult_cpu.cpp  bfv_mult_cpu.py
examples/bfv_poly_7_cpu/: CMakeLists.txt  bfv_poly_7_cpu.cpp  bfv_poly_7_cpu.py
examples/ckks_euclidean_distance_cpu/: CMakeLists.txt  ckks_euclidean_distance_cpu.cpp  ckks_euclidean_distance_cpu.py
examples/ckks_logistic_regression_cpu/: CMakeLists.txt  ckks_logistic_regression_cpu.cpp  ckks_logistic_regression_cpu.py
examples/ckks_mult_cpu/: CMakeLists.txt  ckks_mult_cpu.cpp  ckks_mult_cpu.py
examples/ckks_mult_serialization_cpu/: CMakeLists.txt  ckks_mult_serialization_cpu.cpp
examples/ckks_sparse_bootstrap_cpu/: CMakeLists.txt  ckks_sparse_bootstrap_cpu.cpp  ckks_sparse_bootstrap_cpu.py
examples/project_template/: CMakeLists.txt  README.md  bfv_mult.py  main.cpp
fhe_ops_lib/: CMakeLists.txt  bridge.c  bridge.h  fhe_lib_v2.cpp  fhe_lib_v2.h  fhe_types_v2.h  precision.cpp  precision.h  structs_v2.c  structs_v2.h  utils.cpp  utils.h
frontend/: __init__.py  bootstrap_params.py  custom_task.py  fpga_backend.py  parameter.json
lib/cJSON/: cJSON.c
lib/indicators/: block_progress_bar.hpp  cursor_control.hpp  cursor_movement.hpp  display_width.hpp  dynamic_progress.hpp  indeterminate_progress_bar.hpp  multi_progress.hpp  progress_bar.hpp  progress_spinner.hpp  setting.hpp  termcolor.hpp  terminal_size.hpp
lib/indicators/details/: stream_helper.hpp
lib/log/: log.c  log.h
lib/thread_pool/: BS_thread_pool.hpp
lib/wolfssl/include/wolfssl/: options.h
mega_ag_runners/: CMakeLists.txt  c_argument.h  cpu_mem_monitor.h  cpu_task_utils.h  mega_ag.cpp  mega_ag.h  mega_ag_executors.h  task_cancellation.h  wrapper.h
mega_ag_runners/cpu/: CMakeLists.txt  cpu_wrapper.cpp  mega_ag_executors_cpu.cpp
mega_ag_runners/fpga/: CMakeLists.txt  fpga_abi_bridge_executors.h  fpga_ops_wrapper.h  fpga_wrapper.cpp
mega_ag_runners/gpu/: CMakeLists.txt  gpu_abi_bridge_executors.h  gpu_mem_monitor.h  gpu_wrapper.cu  mega_ag_executors_gpu.cu
plot_mem/: plot_mem.py
plug-in/: sigsetup.h
plug-in/SEAL/: CMakeLists.txt
plug-in/SEAL/acc/: CMakeLists.txt  abi_bridge_executors.h  argument.h  c_struct_import_export.cpp  c_struct_import_export.h  check_sig.cpp  check_sig.h  fpga_runner.cpp  gpu_runner.cpp  readme  runner.cpp  runner.h
plug-in/SEAL/test_acc/: CMakeLists.txt  catch.hpp  fixture.hpp  test_bfv_fpga.cpp  test_bfv_gpu.cpp  test_ckks_fpga.cpp  test_ckks_gpu.cpp  test_config.hpp.in  utils.cpp  utils.h
plug-in/lattigo/: Readme.md  go.mod  go.sum
plug-in/lattigo/acc/: abi_bridge_executors.cc  argument.go  c_struct_import_export.go  check_sig.go  fpga_runner.go  gpu_runner.go
plug-in/lattigo/test_acc/: bfv_fpga_test.go  bfv_gpu_test.go  ckks_fpga_test.go  ckks_gpu_test.go  utils.go
tools/: task_progress_bar.h
unittests/: CMakeLists.txt  conftest.py  fixture.hpp  test_config.hpp.in  test_config.py.in  test_cpu_bfv.cpp  test_cpu_bfv.py  test_cpu_ckks.cpp  test_cpu_ckks.py  test_fhe_task_param.cpp  test_fpga_bfv.cpp  test_fpga_bfv.py  test_fpga_ckks.cpp  test_fpga_ckks.py  test_gpu_bfv.cpp  test_gpu_bfv.py  test_gpu_ckks.cpp  test_gpu_ckks.py  test_lattigo.cpp  test_mp_lattigo.cpp  test_sparse_bootstrap.cpp  test_task_cancellation.cpp  utils.cpp  utils.h
